# stratovirt

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.ch.md  README.en.md  README.md  _typos.toml  build.rs
acpi/: Cargo.toml
acpi/src/: acpi_device.rs  acpi_table.rs  aml_compiler.rs  error.rs  lib.rs  table_loader.rs
address_space/: Cargo.toml
address_space/src/: address.rs  address_space.rs  error.rs  host_mmap.rs  lib.rs  listener.rs  ramlist.rs  region.rs  state.rs
audio/: Cargo.toml
audio/src/: auth.rs  lib.rs  volume.rs
audio/src/backend/: alsa.rs  mod.rs  ohaudio.rs
block_backend/: Cargo.toml
block_backend/src/: file.rs  lib.rs  raw.rs
block_backend/src/qcow2/: cache.rs  check.rs  header.rs  mod.rs  refcount.rs  snapshot.rs  table.rs
boot_loader/: Cargo.toml
boot_loader/src/: error.rs  lib.rs
boot_loader/src/aarch64/: mod.rs
boot_loader/src/x86_64/: bootparam.rs  gdt.rs  mod.rs  mptable.rs
chardev_backend/: Cargo.toml
chardev_backend/src/: chardev.rs  lib.rs
cpu/: Cargo.toml
cpu/src/: error.rs  lib.rs
cpu/src/aarch64/: caps.rs  core_regs.rs  mod.rs  regs.rs
cpu/src/x86_64/: caps.rs  cpuid.rs  mod.rs
device_model/: Cargo.toml
device_model/src/: lib.rs
device_model/src/cpu/: mod.rs
device_model/src/interrupt_controller/: mod.rs
device_model/src/legacy/: pl031.rs  serial.rs
device_model/src/micro_vm/: cmdline.rs  main_loop.rs  micro_syscall.rs  mod.rs
device_model/src/mmio/: bus.rs  mod.rs  virtio_mmio.rs
device_model/src/virtio/: balloon.rs  block.rs  console.rs  mod.rs  net.rs  queue.rs
devices/: Cargo.toml
devices/src/: lib.rs
devices/src/acpi/: cpu_controller.rs  ged.rs  mod.rs  power.rs
devices/src/camera_backend/: demo.rs  mod.rs  ohcam.rs  v4l2.rs
devices/src/interrupt_controller/: error.rs  mod.rs
devices/src/legacy/: chardev.rs  error.rs  fwcfg.rs  i8042.rs  mod.rs  pflash.rs  pl011.rs  pl031.rs  ramfb.rs  rtc.rs  serial.rs
devices/src/misc/: ivshmem.rs  mod.rs  pvpanic.rs
devices/src/pci/: bus.rs  config.rs  demo_dev.rs  error.rs  host.rs  hotplug.rs  intx.rs  mod.rs  msix.rs  root_port.rs
devices/src/scsi/: bus.rs  disk.rs  mod.rs
devices/src/smbios/: smbios_table.rs
devices/src/sysbus/: error.rs  mod.rs
devices/src/usb/: camera.rs  camera_media_type_guid.rs  config.rs  consumer.rs  descriptor.rs  error.rs  hid.rs  keyboard.rs  mod.rs  storage.rs  tablet.rs  uas.rs
hisysevent/: Cargo.toml  build.rs
hisysevent/code_generator/: Cargo.toml
hisysevent/code_generator/src/: lib.rs
hisysevent/event_info/: camera_backend.toml  example.toml  machine.toml  machine_manager.toml  misc.toml  util.toml  volume.toml
hisysevent/src/: interface.rs  lib.rs
hypervisor/: Cargo.toml
hypervisor/src/: error.rs  lib.rs
hypervisor/src/kvm/: interrupt.rs  listener.rs  mod.rs  state.rs  vm_state.rs
hypervisor/src/test/: listener.rs  mod.rs
hypervisor_refactor/: Cargo.toml
hypervisor_refactor/src/: error.rs  lib.rs
hypervisor_refactor/src/kvm/: interrupt.rs  listener.rs  mod.rs  vm_state.rs
image/: Cargo.toml
image/src/: cmdline.rs  img.rs  main.rs
ipp_proxy/: Cargo.toml
ipp_proxy/src/: lib.rs  main.rs
ipp_proxy/src/proxy_client/: ipp_printer.rs  ipp_processing.rs  mod.rs  state_channel.rs
machine/: Cargo.toml
machine/src/: error.rs  fdt.rs  lib.rs  vm_state.rs
machine/src/aarch64/: fdt.rs  micro.rs  mod.rs  pci_host_root.rs  standard.rs
machine/src/arch/: mod.rs
machine/src/micro_common/: mod.rs  syscall.rs
machine_manager/: Cargo.toml  build.rs
machine_manager/src/: cmdline.rs  error.rs  event_loop.rs  lib.rs  machine.rs  notifier.rs  signal_handler.rs  socket.rs  state_query.rs  temp_cleaner.rs  test_server.rs
migration/: Cargo.toml
migration/migration_derive/: Cargo.toml
migration/src/: device_state.rs  error.rs  general.rs  header.rs  lib.rs  manager.rs  migration.rs  protocol.rs  snapshot.rs  status.rs
migration_derive/: Cargo.toml
migration_derive/src/: attr_parser.rs  field_parser.rs  lib.rs  struct_parser.rs
mmio/: Cargo.toml
mmio/src/: bus.rs  lib.rs  virtio_mmio.rs
ozonec/: Cargo.toml  build.rs
ozonec/oci_spec/: Cargo.toml
ozonec/src/: main.rs
ozonec/tests/: README.md  config.json  console.bats  create.bats  exec.bats  helpers.bash  mount.bats  namespace.bats
pci/: Cargo.toml
pci/src/: bus.rs  config.rs  demo_dev.rs  error.rs  host.rs  hotplug.rs  intx.rs  lib.rs  msix.rs  root_port.rs
sysbus/: Cargo.toml
sysbus/src/: lib.rs
trace/: Cargo.toml  build.rs
trace/src/: ftrace.rs  hitrace.rs  lib.rs  trace_scope.rs
trace/trace_event/: aio.toml  cpu.toml  device_legacy.toml  event_loop.toml  ui.toml  usb.toml  virtio.toml
trace/trace_generator/: Cargo.toml
trace/trace_info/: acpi.toml  block_backend.toml  camera.toml  device_legacy.toml  event_loop.toml  gpu.toml  kvm.toml  machine.toml  memory.toml  misc.toml  pci.toml  scsi.toml  ui.toml  usb.toml  virtio.toml
ui/: Cargo.toml
ui/src/: console.rs  error.rs  input.rs  keycode.rs  lib.rs  pixman.rs  utils.rs
ui/src/gtk/: draw.rs  (+2 more)
usb/: Cargo.toml
usb/src/: bus.rs  config.rs  descriptor.rs  error.rs  hid.rs  keyboard.rs  lib.rs  tablet.rs  usb.rs
util/: Cargo.toml  build.rs
util/src/: align.rs  arg_parser.rs  bitmap.rs  byte_code.rs  checksum.rs  clock.rs  daemonize.rs  device.rs  device_tree.rs  edid.rs  epoll_context.rs  error.rs  evdev.rs  fdt.rs  file.rs  kvm_ioctls_ext.rs  leak_bucket.rs  lib.rs  link_list.rs  logger.rs  loop_context.rs  macnat.rs  num_ops.rs  offsetof.rs  pixman.rs  reader.rs  seccomp.rs  socket.rs  syscall.rs  tap.rs  test_helper.rs  thread_pool.rs  time.rs  trace.rs  unix.rs  v4l2.rs
vfio/: Cargo.toml
vfio/src/: error.rs  lib.rs  vfio_dev.rs  vfio_pci.rs
vhost_user_fs/: Cargo.toml
vhost_user_fs/src/: cmdline.rs  error.rs  fs.rs  fs_ops.rs  fuse_msg.rs  fuse_proc.rs  fuse_req.rs  lib.rs  main.rs  sandbox.rs  securecomputing.rs  vhost_user_fs.rs  vhost_user_server.rs  virtio_fs.rs
virtio/: Cargo.toml
virtio/src/: balloon.rs  block.rs  console.rs  error.rs  gpu.rs  lib.rs  net.rs  queue.rs  rng.rs  virtio_mmio.rs  virtio_pci.rs
(+463 files in other folders)
