[package]
name = "stratovirt"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
description = "a lightweight hypervisor with low memory overhead and fast booting speed"
license = "Mulan PSL v2"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
machine = { path = "machine" }
machine_manager = { path = "machine_manager" }
util = { path = "util" }

[workspace]
members = [
    "ozone",
    "image",
    "tests/mod_test",
]

[features]
default = []
boot_time = ["machine/boot_time"]
scream_alsa = ["machine/scream_alsa"]
scream_pulseaudio = ["machine/scream_pulseaudio"]
demo_device = ["machine/demo_device"]
usb_host = ["machine/usb_host"]
usb_camera_v4l2 = ["machine/usb_camera_v4l2"]
gtk = ["machine/gtk"]
vnc = ["machine/vnc"]
ramfb = ["machine/ramfb"]
virtio_gpu = ["machine/virtio_gpu"]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
stratovirt = { path = "/usr/bin/stratovirt" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
