[package]
name = "acpi"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "acpi module"

[dependencies]
log = "0.4"
byteorder = "1.4.3"
thiserror = "1.0"
anyhow = "1.0"

address_space = { path = "../address_space" }
util = {path = "../util"}
machine_manager = {path = "../machine_manager"}
