[package]
name = "address_space"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "provide memory management for VM"

[dependencies]
libc = "0.2"
log = "0.4"
nix = { version = "0.26.2", default-features = false, features = ["fs", "feature"] }
vmm-sys-util = "0.11.1"
arc-swap = "1.6.0"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.18.0"
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration/migration_derive" }
util = { path = "../util" }
