[package]
name = "block_backend"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

[dependencies]
thiserror = "1.0"
vmm-sys-util = "0.11.0"
anyhow = "1.0"
log = "0.4"
byteorder = "1.4.3"
once_cell = "1.18.0"
libc = "0.2"
machine_manager = { path = "../machine_manager" }
util = { path = "../util" }
trace = {path = "../trace"}
