[package]
name = "boot_loader"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2018"
license = "Mulan PSL v2"

[dependencies]
error-chain = "0.12.4"
kvm-bindings = ">=0.3.0"
kvm-ioctls = "0.6.0"
libc = ">=0.2.71"
log = "0.4.8"
vmm-sys-util = ">=0.7.0"
address_space = { path = "../address_space" }
devices = { path = "../devices" }
util = { path = "../util" }
