[package]
name = "boot_loader"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

[dependencies]
error-chain = "0.12.4"
kvm-bindings = { version = ">=0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.11.0"
libc = "0.2"
log = "0.4"
vmm-sys-util = ">=0.10.0"
address_space = { path = "../address_space" }
devices = { path = "../devices" }
util = { path = "../util" }
