[package]
name = "cpu"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "CPU emulation"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.13.0"
log = "0.4"
libc = "0.2"
vmm-sys-util = "0.11.1"
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration/migration_derive" }
util = { path = "../util" }

[dev-dependencies]
serial_test = "2.0.0"

[features]
default = []
boot_time = []
