[package]
name = "cpu"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "CPU emulation"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
nix = { version = "0.26.2", default-features = false, features = ["fs", "feature"] }
log = "0.4"
libc = "0.2"
vmm-sys-util = "0.11.1"
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration/migration_derive" }
util = { path = "../util" }
trace = { path = "../trace" }

[features]
default = []
boot_time = []
