[package]
name = "device_model"
version = "0.1.0"
authors = ["Huawei StratoVirt Team"]
edition = "2018"
license = "Mulan PSL v2"

[dependencies]
log = "0.4.8"
libc = "0.2.71"
kvm-bindings = "0.2.0"
kvm-ioctls = "0.5.0"
vmm-sys-util = "0.6.1"
byteorder = "1.3.4"
error-chain = "0.12.4"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
address_space = { path = "../address_space" }
util = { path = "../util" }
machine_manager = { path = "../machine_manager" }
boot_loader = { path = "../boot_loader" }

[features]
default = ["qmp"]
mmio = []
qmp = []
