[package]
name = "devices"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Misc device emulation"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"
log = "0.4"
kvm-ioctls = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
vmm-sys-util = "0.11.0"
byteorder = "1.4.3"
drm-fourcc = ">=2.2.0"
once_cell = "1.9.0"
strum = "0.24.1"
strum_macros = "0.24.3"
v4l2-sys-mit = "0.2.0"
serde_json = "1.0"
rand = "0.8.5"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration_derive" }
sysbus = { path = "../sysbus" }
pci = { path = "../pci" }
util = { path = "../util" }
acpi = { path = "../acpi" }

[target.'cfg(not(target_env = "musl"))'.dependencies]
ui = { path = "../ui" }
pci = { path = "../pci" }
pulse = { version = "2.0", package = "libpulse-binding" }
psimple = { version = "2.0", package = "libpulse-simple-binding" }
rusb = "0.9"
libusb1-sys = "0.6.4"
cairo-rs = "0.14.9"
alsa = "0.7.0"

[dev-dependencies]
serial_test = "0.5.1"

[features]
default = []
