[package]
name = "hisysevent"
version = "2.4.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Provide hisysevent infrastructure of hmos for StratoVirt"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
anyhow = "1.0"
libloading = "0.7.4"

[features]
hisysevent = []
