[package]
name = "hypervisor"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

[dependencies]
arc-swap = ">=1.5.0"
thiserror = "1.0"
anyhow = "1.0"
kvm-bindings = { version = ">=0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.11.0"
log = "0.4"
vmm-sys-util = ">=0.10.0"
once_cell = "1.13.0"
util = { path = "../util" }
