[package]
name = "hypervisor"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.15.0"
libc = "0.2"
log = "0.4"
vmm-sys-util = "0.11.1"
address_space = { path = "../address_space" }
cpu = { path = "../cpu" }
devices = { path = "../devices" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration/migration_derive" }
util = { path = "../util" }
