[package]
name = "hypervisor_refactor"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.13.0"
machine_manager = { path = "../machine_manager" }
