[package]
name = "stratovirt-img"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Binary tools for offline disk operations"

[dependencies]
anyhow = "1.0"
log = "0.4"
libc = "0.2"
util = { path = "../util" }
machine_manager = { path = "../machine_manager" }
block_backend = { path = "../block_backend"}
