[package]
name = "ipp_proxy"
version = "0.1.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
description = "Provides printer sharing for stratovirt"
license = "Mulan PSL v2"

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
bytes = "1"
clap = { version = "4", default-features = false, features = ["std", "derive"] }
httparse = "1.9.4"
http = { version = "1.3.1", default-features = false }
ipp = { version = "5.2.0", default-features = false }
libc = "0.2.139"
log = "0.4"
serde_json = "1.0.96"
signal-hook = "0.3.17"
signal-hook-registry = "1.4.2"
util = { path = "../util" }
vmm-sys-util = "0.12.1"
strum = "0.24.1"
strum_macros = "0.24.3"
uuid = { version = "1.16.0", features = ["v5"] }

[features]
testing = []
