[package]
name = "machine"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Emulation machines"

[dependencies]
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
log = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vmm-sys-util = "0.11.0"
vfio-bindings = "0.3"
thiserror = "1.0"
anyhow = "1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
acpi = { path = "../acpi" }
address_space = { path = "../address_space" }
boot_loader = { path = "../boot_loader" }
cpu = { path = "../cpu" }
devices = { path = "../devices" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration_derive" }
pci = { path = "../pci" }
sysbus = { path = "../sysbus" }
util = { path = "../util" }
virtio = { path = "../virtio" }
vfio = { path = "../vfio" }

[target.'cfg(not(target_env = "musl"))'.dependencies]
ui = { path = "../ui" }

[features]
default = ["qmp"]
qmp = []
boot_time = ["cpu/boot_time"]
