[package]
name = "machine_manager"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libc = "0.2"
serde_json = "1.0"
vmm-sys-util = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.20"
strum_macros = "0.20"
once_cell = "1.13.0"
thiserror = "1.0"
anyhow = "1.0"
util = { path = "../util" }

[features]
default = []

