[package]
name = "machine_manager"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "0.4"
libc = "0.2"
serde_json = "1.0"
vmm-sys-util = "0.11.1"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
once_cell = "1.18.0"
thiserror = "1.0"
anyhow = "1.0"
trace = { path = "../trace" }
util = { path = "../util" }
clap = { version = "=4.1.4", default-features = false, features = ["std", "derive"] }

[features]
default = []
scream = []
scream_alsa = ["scream"]
scream_pulseaudio = ["scream"]
scream_ohaudio = ["scream"]
demo_device = []
usb_host = []
usb_camera = []
usb_camera_v4l2 = ["usb_camera"]
usb_camera_oh = ["usb_camera"]
windows_emu_pid = []
ohui_srv = []
gtk = []
vnc = []
vnc_auth = []
ramfb = []
virtio_gpu = []
pvpanic = []
