[package]
name = "migration"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2018"

[dependencies]
util = {path = "../util"}
error-chain = "0.12.4"
kvm-ioctls = "0.6.0"
serde = { version = ">=1.0.114", features = ["derive"] }
serde_json = "1.0.55"
once_cell = "1.9.0"
log = "0.4.8"

[dev-dependencies]
migration_derive = { path = "../migration_derive" }
