[package]
name = "migration"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"

[dependencies]
kvm-ioctls = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
util = {path = "../util"}
machine_manager = { path = "../machine_manager" }

[dev-dependencies]
migration_derive = { path = "migration_derive" }
