[package]
name = "migration_derive"
version = "0.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2018"
license = "Mulan PSL v2"

[dependencies]
syn = { version = "1.0.72", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0"

[lib]
name = "migration_derive"
proc-macro = true