[package]
name = "mmio"
version = "0.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2018"
license = "Mulan PSL v2"
description = "MMIO bus emulation"

[dependencies]
byteorder = "1.3.4"
error-chain = "0.12.4"
kvm-ioctls = "0.6.0"
libc = "0.2.71"
log = "0.4.8"
vmm-sys-util = "0.7.0"
address_space = { path = "../address_space" }
machine_manager = { path = "../machine_manager" }
util = { path = "../util" }
virtio = { path = "../virtio" }
