[package]
name = "ozonec"
version = "0.1.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "An OCI runtime implemented by Rust"

[dependencies]
anyhow = "= 1.0.71"
caps = "0.5.5"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
clap = { version = "= 4.1.4", default-features = false, features = ["derive", "cargo", "std", "help", "usage"] }
clone3 = "0.2.3"
libc = "= 0.2.146"
log = { version = "= 0.4.18", features = ["std"]}
nix = "= 0.26.2"
oci_spec = { path = "oci_spec" }
prctl = "1.0.0"
procfs = "0.14.0"
rlimit = "0.5.3"
serde = { version = "= 1.0.163", features = ["derive"] }
serde_json = "= 1.0.96"
thiserror = "= 1.0.40"

[workspace]

[profile.dev]
panic = "unwind"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
