[package]
name = "pci"
version = "2.1.0"
authors = ["Huawei StratoVirt Team"]
edition = "2018"
license = "Mulan PSL v2"
description = "PCI"

[dependencies]
byteorder = "1.3.4"
error-chain = "0.12.4"
kvm-bindings = ">=0.3.0"
kvm-ioctls = "0.6.0"
libc = ">=0.2.71"
log = "0.4.8"
vmm-sys-util = ">=0.7.0"
once_cell = "1.9.0"
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration_derive" }
sysbus = { path = "../sysbus" }
util = { path = "../util" }
acpi = { path = "../acpi" }
