[package]
name = "pci"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "PCI"

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0"
anyhow = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.12.0"
libc = "0.2"
log = "0.4"
vmm-sys-util = "0.11.0"
once_cell = "1.13.0"
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration_derive" }
sysbus = { path = "../sysbus" }
util = { path = "../util" }
acpi = { path = "../acpi" }

[target.'cfg(not(target_env = "musl"))'.dependencies]
vnc = { path = "../vnc" }
