[package]
name = "sysbus"
version = "2.1.0"
authors = ["Huawei StratoVirt Team"]
edition = "2018"
license = "Mulan PSL v2"
description = "Emulate system bus"

[dependencies]
error-chain = "0.12.4"
kvm-ioctls = "0.6.0"
vmm-sys-util = ">=0.7.0"
acpi = { path = "../acpi" }
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }
