[package]
name = "trace"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Provide tracing infrastructure for StratoVirt"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
regex = "1"
anyhow = "1.0"
trace_generator = { path = "trace_generator" }

[features]
trace_to_logger = []
trace_to_ftrace = []
