[package]
name = "ui"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "User Interface"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"
log = "0.4.8"
serde_json = "1.0.55"
vmm-sys-util = "0.11.0"
once_cell = "1.9.0"
sscanf = "0.2.1"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
sasl2-sys = "0.1.20"
bitintr = "0.2.0"
gtk = "0.14.3"
gettext-rs = "0.7.0"
machine_manager = { path = "../machine_manager" }
util = { path = "../util" }
