[package]
name = "ui"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "User Interface"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
vmm-sys-util = "0.11.1"
once_cell = "1.18.0"
sscanf = "0.4.1"
rustls = "0.21.1"
rustls-pemfile = "1.0.2"
sasl2-sys = "0.1.20"
bitintr = "0.3.0"
gtk = "0.17.1"
gettext-rs = { version = "0.7.0", features = ["gettext-system"]}
machine_manager = { path = "../machine_manager" }
util = { path = "../util" }
