[package]
name = "ui"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "User Interface"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
vmm-sys-util = "0.11.1"
once_cell = "1.18.0"
sscanf = "0.4.1"
bitintr = "0.3.0"
gtk = { version = "0.17.1", optional = true }
gettext-rs = { version = "0.7.0", features = ["gettext-system"], optional = true }
cairo-rs = { version = "0.17.10", features = ["png"], optional = true }
rustls = { version = "0.21.1", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
sasl2-sys = { version = "0.1.20", optional = true }
machine_manager = { path = "../machine_manager" }
util = { path = "../util" }
trace = { path = "../trace" }
address_space = { path = "../address_space" }

[features]
keycode = []
pixman = ["util/pixman"]
console = ["pixman"]
gtk = ["console", "keycode", "dep:cairo-rs", "dep:gtk", "dep:gettext-rs", "machine_manager/gtk"]
vnc = ["console", "keycode", "machine_manager/vnc"]
vnc_auth = ["vnc", "dep:rustls", "dep:rustls-pemfile", "dep:sasl2-sys", "machine_manager/vnc_auth"]
ohui_srv = ["console", "keycode", "machine_manager/ohui_srv"]
