[package]
name = "usb"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "USB controller and device emulation"

[dependencies]
byteorder = "1.3.4"
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"
log = "0.4.8"
once_cell = "1.9.0"
address_space = { path = "../address_space" }
util = { path = "../util" }
pci = { path = "../pci" }
machine_manager = { path = "../machine_manager" }

[target.'cfg(not(target_env = "musl"))'.dependencies]
vnc = { path = "../vnc" }