[package]
name = "util"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
thiserror = "1.0"
anyhow = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.12.0"
libc = "0.2"
log = { version = "0.4", features = ["std"]}
vmm-sys-util = "0.11.0"
byteorder = "1.4.3"
once_cell = "1.13.0"
io-uring = "0.5.7"
errno = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
