[package]
name = "util"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
thiserror = "1.0"
anyhow = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
nix = { version = "0.26.2", default-features = false, features = ["poll", "term", "time", "signal", "fs", "feature"] }
libc = "0.2"
log = { version = "0.4", features = ["std"]}
vmm-sys-util = "0.11.1"
byteorder = "1.4.3"
once_cell = "1.18.0"
io-uring = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
v4l2-sys-mit = { version = "0.3.0", optional = true }
trace = {path = "../trace"}

[features]
default = []
usb_camera_v4l2 = ["dep:v4l2-sys-mit"]
pixman = []
